--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-table": "^8.21.3",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
